<resources>
    <string name="app_name">WSW</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>

    <!-- Home -->
    <string name="wsw">WSW</string>
    <string name="secret_board">비밀게시판</string>
    <string name="review">후기</string>
    <string name="study">스터디</string>
    <string name="HOT">HOT </string>
    <string name="posting">게시물</string>
    <string name="lookwsw">“오늘 받은 편지보러가기”</string>
    <string name="notification">알림</string>
    <string name="twswText">‘’who support whom”
백인이 유색인종이 겪는 인종차별을 이해할 수 없고, 비장애인이 장애인이 겪는 차별을 이해할 수 없듯이,  역사적으로 여성이 겪어온 차별을 남성이 이해할수 없다.  여전히 사회구조적, 문화적으로 여성차별의 현실이 우리앞에 놓여있다.  예로부터 여성은 공학</string>
    <string name="wswText">똑똑 누군가 당신에게 꿀팁을 주고 간 것 같네요.<br/>확인하러 가볼까요 -></string>

    <!-- Mypage -->
    <string name="mypage">MYPAGE</string>
    <string name="group">덕성여자대학교</string>
    <string name="aboutme">김덕조/컴퓨터공학과</string>
    <string name="scrap">스크랩</string>
    <string name="apply_study">스터디 지원현황</string>
    <string name="msg">쪽지함</string>
    <string name="faq">FAQ</string>
    <string name="logout">로그아웃</string>
    <string name="left">회원탈퇴</string>

    <!--RandomMessage-->
    <string name="todaymsg">"오늘 받은 편지에요"</string>
    <string name="clickmsg">읽고 싶은 편지를 눌러보세요 : )</string>
    <string name="preferencemsg">익명의 편지가 어떠셨나요?</string>
    <string name="like">좋아요</string>
    <string name="hate">별로에요</string>

    <!--비밀게시판-->
    <string name="user_name">익명</string>
    <string name="search_hint">검색</string>
    <string name="comment_hint">댓글을 입력하세요!</string>
    <string name="complete">완료</string>
    <string name="write_secret_board">비밀게시판 글쓰기</string>
    <string name="write_study">스터디 글쓰기</string>

    <!--쪽지-->
    <string name="message">쪽지</string>
    <string name="write_message">쪽지보내기</string>

    <!--스터디-->
    <string name="writing_content_hint">내용을 입력하세요</string>
    <string name="writing_title_hint">제목을 입력하세요</string>
    <string name="study_title">스터디 제목</string>
    <string name="selct_study_place">스터디 방식 선택</string> <!-- ㅁㄴㅇㄹㅁㅇ -->
    <string name="study_place">스터디 방식</string>
    <string name="study_info">스터디 소개 및 진행 방식</string>
    <string name="study_info_underline"><u>스터디 소개 및 진행 방식</u></string>
    <string name="study_notice">스터디 지원서 안내문</string>
    <string name="study_notice_underline"><u>스터디 지원서 안내문</u></string>
    <string name="writing_study_notice_hint">
        ex) 스터디 가능 요일, 시간대, 개발 경험 등등 스터디 참여에 필요한 다양한 질문을 해보세요.
    </string>
    <string name="study_recruitment">스터디 모집</string>
    <string name="go_to_apply">지원하러 가기</string>
    <string name="recruitment_closing">모집이 마감되었습니다.</string>
    <string name="to_do_apply">스터디 지원하기</string>


    <!--후기게시판-->
    <string name="review_board">후기게시판</string>
    <string name="write_review">후기게시판 글쓰기</string>
    <string name="company">회사</string>


    <!--질문게시판-->
    <string name="question_board">질문게시판</string>
    <string name="write_question">질문게시판 글쓰기</string>

</resources>