<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_margin="77dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="33dp"
        android:layout_below="@+id/logo"
        android:id="@+id/input_login">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text="@string/email"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="15dp"
            android:textColor="#4F5950"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:background="@drawable/input_login_border">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:text="@string/password"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="15dp"
            android:textColor="#4F5950"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:background="@drawable/input_login_border"
            android:layout_below="@+id/email"
            android:layout_marginTop="22dp">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:text="@string/forgotpass"
            android:gravity="right"
            android:layout_marginTop="7dp"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_login"
        android:layout_margin="33dp"
        android:background="@drawable/next_login_border"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/notosanskr_bold"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:id="@+id/login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don’t have an account?  "
            android:id="@+id/text_sign_up"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#4F5950"
            android:id="@+id/signup_below"
            android:layout_toRightOf="@+id/text_sign_up"/>

    </RelativeLayout>


</RelativeLayout>