<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mypage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/topBar"
            style="@style/TitleBar"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:id="@+id/back"/>

            <TextView
                style="@style/TitleText"
                android:text="@string/mypage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/back"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="38dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/gray_border">

                    <TextView
                        android:id="@+id/tv_company"
                        style="@style/Text17_Bold_Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group" />
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="김덕성"
                        android:layout_below="@id/tv_company"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/gotoScrab"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/gray_border">

                    <TextView
                        style="@style/Text17_Bold_Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scrap" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/gotoStudyList"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/gray_border">

                    <TextView
                        style="@style/Text17_Bold_Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply_study" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/gotoMessage"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/gray_border">

                    <TextView
                        style="@style/Text17_Bold_Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="70dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:src="@drawable/gray_line"
                        android:layout_marginBottom="14dp"/>

                    <TextView
                        style="@style/Text17_Bold_Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:text="@string/faq" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:src="@drawable/gray_line"
                        android:layout_marginBottom="14dp"/>

                    <TextView
                        style="@style/Text17_Bold_Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:text="@string/logout" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:src="@drawable/gray_line"
                        android:layout_marginBottom="14dp"/>

                    <TextView
                        style="@style/Text17_Bold_Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:text="@string/left" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>