<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.signup.SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="33dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:src="@drawable/logo"
            android:id="@+id/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/img_btn">

            <ImageButton
                android:layout_width="300dp"
                android:layout_height="200dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                android:text="회원가입 승인까지 2일~3일 소요 됩니다."/>

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_btn"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="36dp"
            android:id="@+id/input_login">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="15dp"
                android:textColor="#4F5950"
                android:textSize="14sp"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                android:background="@drawable/input_login_border">
            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="15dp"
                android:textColor="#4F5950"
                android:textSize="14sp"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                android:background="@drawable/input_login_border"
                android:layout_below="@+id/name"
                android:layout_marginTop="22dp">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="15dp"
                android:textColor="#4F5950"
                android:textSize="14sp"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                android:background="@drawable/input_login_border"
                android:layout_below="@+id/email"
                android:layout_marginTop="22dp">
            </EditText>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/next_login_border"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_signup"
            android:layout_marginTop="11dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/login"
                android:textColor="#4F5950"
                android:id="@+id/login_below"
                android:layout_toRightOf="@id/text_login_up"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="Do you have an account already?  "
                android:id="@+id/text_login_up"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>