<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout style="@style/TitleBar">

        <ImageView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:paddingTop="1dp"
            android:src="@drawable/ic_exit" />


        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/exit"
            android:includeFontPadding="false"
            android:text="@string/write_study" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="28dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/studyTitleTextView"
                style="@style/Text12_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_title" />

            <EditText
                style="@style/Text12_Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_writing_board"
                android:paddingLeft="17dp"
                android:paddingRight="15dp"
                android:paddingTop="6dp"
                android:paddingBottom="5dp"
                android:hint="@string/writing_content_hint"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/studyProceedWayTextView"
                    style="@style/Text12_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:text="@string/selct_study_place" />

                <RadioGroup
                    android:id="@+id/radioGroup_studyWay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/studyProceedWayTextView"
                    android:orientation="horizontal">

                    <RadioButton
                        style="@style/Text12_Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="9dp"
                        android:text="비대면"
                        android:textColor="@color/colorAccent" />

                    <RadioButton
                        style="@style/Text12_Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="대면"
                        android:textColor="@color/colorAccent" />

                </RadioGroup>
                
                <EditText
                    style="@style/Text10_Regular"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:hint="희망 지역 입력"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/studyProceedWayTextView"
                    android:layout_toRightOf="@+id/radioGroup_studyWay"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/Text12_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="모집인원"/>
                <EditText
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    style="@style/Text12_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="명"/>
            </LinearLayout>


            <TextView
                style="@style/Text12_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="5dp"
                android:text="@string/study_notice" />

            <EditText
                style="@style/WritingBoardEditText"
                android:layout_width="match_parent"
                android:layout_height="145dp" />


            <TextView
                style="@style/Text12_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="5dp"
                android:text="@string/study_notice" />

            <EditText
                style="@style/WritingBoardEditText"
                android:layout_width="match_parent"
                android:layout_height="145dp" />


            <Button
                style="@style/CompleteButton"
                android:layout_gravity="end"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>